syntax = "proto3";
package pb;

message Activity {
    int64  id = 1;
    int64  wid = 2;
    string name = 3;
    string desc = 4;
    int32  activityType = 5;
    int64  relativeId = 6;
    string extra = 7;
    int64  timeStarted = 8;
    int64  timeEnd = 9;
    int64  createdAt = 10;
    int64  updatedAt = 11;
}

message ActivityList {
    int64 index = 1;
    int64 limit = 2;
    int64 total = 3;
    repeated Activity activities = 4;
}